Replace String.format(..) with String.formatted(..) in getEntry(key) of Cache.
Format source code.